# Rookie

./: .gitignore  CMakeLists.txt  ChessTest.ipynb  Rookie++.cpp  Rookie.c  TODO  TODO.txt  attack.c  attack.h  bitboard.c  bitboard.cpp  bitboard.h  board.c  board.cpp  board.h  chess.py  chess.sublime-workspace  chess_board.py  data.cpp  data.h  defs.h  evaluate.c  evaluate.cpp  evaluate.h  globals.h  hashkeys.c  hashkeys.h  init.c  init.cpp  init.h  io.c  io.cpp  io.h  makemove.c  makemove.cpp  misc.cpp  movegen.c  movegen.cpp  movegen.h  perft.c  (+16 more)
.ipynb_checkpoints/: ChessTest-checkpoint.ipynb
Chess_Engine/: Chesser  Chesser.c  bitboard.c  bitboard.h  board.h  defs.h  globals.h  init.c  init.h  makefile
Rookie/: Makefile
Rookie/src/: CMakeLists.txt  Makefile  Rookie++  bitboard.cpp  bitboard.h  board.cpp  board.h  cmake_install.cmake  defs.h  globals.h  init.cpp  io.cpp  io.h  misc.h  movegen.cpp  movegen.h  perft.cpp  polybook.cpp  polykeys.h  search.cpp  ttable.h  uci.cpp  xboard.cpp
Rookie/test/: CTestTestfile.cmake  Makefile  RookieTest  cmake_install.cmake  movegen.cpp
src/: CMakeLists.txt  Rookie++.cpp  attack.h  bitboard.cpp  bitboard.h  board.cpp  board.h  data.h  defs.h  evaluate.cpp  evaluate.h  init.cpp  init.h  interface.h  io.cpp  misc.h  movegen.cpp  movegen.h  perft.cpp  polybook.cpp  polykeys.cpp  search.cpp  validate.cpp
test/: CMakeLists.txt  RookieTest.cpp  movegen.cpp
